# Automation

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  infra-smoke.yml
.husky/: commit-msg
app/adapters/: PocketBaseTasksRepo.ts
app/core/: TasksRepository.ts
apps/agent-orchestrator/: Dockerfile  package.json  tsconfig.json
apps/agent-orchestrator/tests/: smoke.test.ts
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/adapters/: mongo_repository.py  qdrant_client.py  redis_client.py
apps/api/src/app/: __init__.py
apps/api/src/domain/: __init__.py
apps/api/src/interfaces/http/: health.py
apps/api/src/interfaces/http/v1/: __init__.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/tests/: smoke.test.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/adapters/: redis_client.py
apps/worker/src/interfaces/cli/: main.py
apps/worker/src/jobs/: heartbeat.py
apps/worker/src/schedules/: register.py
codex/: architecture.md  checklists.md  standards.md  tasks.seed.yaml
docs/: runbook.md  schema-changelog.md
infra/: docker-compose.yml
infra/docker/: .env.example  compose.dev.override.yml  compose.yml
infra/k8s/: README.md
infra/pocketbase/: Dockerfile
infra/terraform/: README.md
tools/eslint-config/: index.js
tools/precommit/: lint-staged.config.mjs
(+12 files in other folders)
