[project]
name = "automation-api"
version = "0.1.0"
description = "FastAPI service for Automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.1",
  "motor>=3.4.0",
  "redis>=5.0.4",
  "qdrant-client>=1.9.1"
]

[tool.uv]
dev-dependencies = [
  "ruff~=0.5.0",
  "black~=24.4",
  "mypy~=1.10",
  "pytest~=8.2",
  "httpx~=0.27"
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

