[project]
name = "automation-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "redis>=5.0.4",
  "APScheduler>=3.10.4",
  "click>=8.1.7"
]

[tool.uv]
dev-dependencies = [
  "ruff~=0.5.0",
  "black~=24.4",
  "mypy~=1.10",
  "pytest~=8.2"
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
packages = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

